doc/onnx-diagnostic/v0.6.0/_sources/auto_recipes/index.rst
:orphan:

Common Export Issues
====================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is related to the following issues: Cannot export torch.sym_max(x.shape[0], y.shape[0]).">

.. only:: html

  .. image:: /auto_recipes/images/thumb/sphx_glr_plot_dynamic_shapes_max_thumb.png
    :alt:

  :ref:`sphx_glr_auto_recipes_plot_dynamic_shapes_max.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cannot export torch.sym_max(x.shape[0], y.shape[0])</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="torch.export.export uses torch.SymInt to operate on shapes and optimizes the graph it produces. It checks if two tensors share the same dimension, if the shapes can be broadcast, ... To do that, python types must not be used or the algorithm looses information.">

.. only:: html

  .. image:: /auto_recipes/images/thumb/sphx_glr_plot_dynamic_shapes_python_int_thumb.png
    :alt:

  :ref:`sphx_glr_auto_recipes_plot_dynamic_shapes_python_int.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Do not use python int with dynamic shapes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="torch.nonzero returns the indices of the first zero found in a tensor. The output shape is unknown in the generic case but... If you have a 2D tensor with at least a nonzero value in every row, you can guess the dimension. But torch.export.export does not know what you know.">

.. only:: html

  .. image:: /auto_recipes/images/thumb/sphx_glr_plot_dynamic_shapes_nonzero_thumb.png
    :alt:

  :ref:`sphx_glr_auto_recipes_plot_dynamic_shapes_nonzero.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Half certain nonzero</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_recipes/plot_dynamic_shapes_max
   /auto_recipes/plot_dynamic_shapes_python_int
   /auto_recipes/plot_dynamic_shapes_nonzero


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_recipes_python.zip </auto_recipes/auto_recipes_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_recipes_jupyter.zip </auto_recipes/auto_recipes_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
